--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "NewsAppWorkShopSmart"
+rootProject.name = "NewsApp"
 include ':xml'
 include ':data'
 include ':domain'
